--- a/main/assets/css/components/_wide-card.scss
+++ b/main/assets/css/components/_wide-card.scss
@@ -8,14 +8,13 @@
   border-radius: var(--radius);
   padding: 4rem 1.5rem;
   display: grid;
-  align-items: center;
-  justify-items: center;
+  place-items: center;
   gap: 2rem;
 
   .text-component {
     --text-vspace-multiplier: 1.2; //controls vertical spacing of text
     display: grid;
-    justify-items: center;
+    place-items: center;
   }
 
   &__title {
@@ -31,7 +30,7 @@
   }
 
   @include breakpoint(md) {
-      padding: 4.5rem 6rem;
+    padding: 4.5rem 6rem;
     background-position: right center;
     grid-auto-flow: column;
     justify-content: space-between;
