start desktop design

--- a/main/assets/css/custom-style/_colors.scss
+++ b/main/assets/css/custom-style/_colors.scss
@@ -32,22 +32,10 @@
 
   // color contrasts
   @include defineColorHSL(--color-bg, 0, 0%, 100%);
+  @include defineColorHSL(--color-contrast-slight, 0, 0%, 59%);
   @include defineColorHSL(--color-contrast-lower, 0, 0%, 95%);
   @include defineColorHSL(--color-contrast-low, 240, 1%, 83%);
   @include defineColorHSL(--color-contrast-medium, 240, 1%, 48%);
   @include defineColorHSL(--color-contrast-high, 240, 4%, 20%);
   @include defineColorHSL(--color-contrast-higher, 240, 8%, 12%);
-}
-
-@supports(--css: variables) {
-  [data-theme="dark"] {
-
-    // color contrasts
-    @include defineColorHSL(--color-bg, 11, 72%, 66%);
-    @include defineColorHSL(--color-contrast-lower, 11, 73%, 68%);
-    @include defineColorHSL(--color-contrast-low, 0, 0%, 100%);
-    @include defineColorHSL(--color-contrast-medium, 12, 82%, 80%);
-    @include defineColorHSL(--color-contrast-high, 0, 0%, 100%);
-    @include defineColorHSL(--color-contrast-higher, 0, 0%, 100%);
-  }
 }
