--- a/main/assets/css/custom-style/_util.scss
+++ b/main/assets/css/custom-style/_util.scss
@@ -1,3 +1,8 @@
   .bg-primary {
     color: var(--color-white);
   }
+
+  .bg-black-light {
+    color: var(--color-white);
+    background-color: alpha(var(--color-black-light), var(--bg-o, 1));
+  }
