--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -88,15 +88,19 @@ header {
   }
 }
 
+// ++++++++++++++++++++++++++
+// ++ DESIGN - IMAGE CARDS ++
+// ++++++++++++++++++++++++++
+
 main {
   display: grid;
   margin-top: var(--space-xxxl);
   gap: var(--space-xxxl);
 }
 
-// +++++++++++++++++
+// ++++++++++++++++++++++++++
 // ++ DESIGN - IMAGE CARDS ++
-// +++++++++++++++++
+// ++++++++++++++++++++++++++
 
 .design {
 
