--- a/main/assets/css/custom-style/_util.scss
+++ b/main/assets/css/custom-style/_util.scss
@@ -6,3 +6,7 @@
     color: var(--color-white);
     background-color: alpha(var(--color-black-light), var(--bg-o, 1));
   }
+
+  .rotate-180 {
+    transform: rotate(180deg);
+  }
