complete header section for all views

--- a/main/assets/css/components/_wide-card.scss
+++ b/main/assets/css/components/_wide-card.scss
@@ -32,7 +32,7 @@
   @include breakpoint(md) {
     padding: 4.5rem 6rem;
     background-position: right center;
-    grid-auto-flow: column;
+    grid-template-columns: repeat(2, auto);
     justify-content: space-between;
 
     .text-component {
