--- a/main/assets/css/base/_typography.scss
+++ b/main/assets/css/base/_typography.scss
@@ -38,6 +38,13 @@
     font-size: var(--text-sm, 0.833em);
   }
 
+  .text-responsive {
+    font-size: 0.9375rem;
+    @include breakpoint(sm) {
+      font-size: var(--text-base-size, 1em);
+    }
+
+  }
   // --------------------------------
 
   // Inline Text
@@ -80,7 +87,7 @@
     p, blockquote, ul li, ol li {
       line-height: calc(var(--body-line-height) * var(--line-height-multiplier, 1));
     }
-    
+
     ul, ol, p, blockquote, .text-component__block {
       margin-bottom: calc(var(--space-unit) * 0.75 * var(--text-vspace-multiplier, 1));
     }
@@ -106,7 +113,7 @@
       text-align: center;
       margin-top: calc(var(--space-unit) * 0.5);
     }
-    
+
     em {
       font-style: italic;
     }
@@ -134,7 +141,7 @@
   }
 
   @include breakpoint(sm) {
-    .text-component__block--left, 
+    .text-component__block--left,
     .text-component__block--right {
       width: 45%;
 
