--- a/main/assets/css/components/_navigation.scss
+++ b/main/assets/css/components/_navigation.scss
@@ -52,6 +52,7 @@
 
 .nav.fixed {
    flex-direction: row;
+
   .nav__list {
     position: absolute;
     top: var(--nav-height);
@@ -63,6 +64,18 @@
     a {
       font-size: 1.5rem;
     }
+    &::after {
+      content: '';
+      width: 100%;
+      height: 100vh;
+      background: alpha(var(--color-black), 0.5);
+      position: fixed;
+      left: 0;
+      visibility: hidden;
+      opacity: 0;
+      z-index: -1;
+    }
+
     @include breakpoint(sm) {
      visibility: visible;
       opacity: 1;
@@ -76,10 +89,14 @@
     }
   }
 
-  &.open .nav__list {
+  &.open {
+    .nav__list, .nav__list::after {
     visibility: visible;
     opacity: 1;
+    }
   }
+
+
 }
 
   // ++++++++++++++++++
