--- a/main/assets/css/pages/_web_design.scss
+++ b/main/assets/css/pages/_web_design.scss
@@ -54,14 +54,15 @@
 // ++++++++++++++++++++++++++
 
   .image-cards {
+    grid-template-areas:
+      'app'
+      'design';
 
     @include breakpoint(md) {
       grid-template-areas:
         'app design';
     }
-
   }
-
 
 
 }
