--- a/main/assets/css/pages/_web_design.scss
+++ b/main/assets/css/pages/_web_design.scss
@@ -31,6 +31,7 @@
 
       @include breakpoint(md) {
         grid-template-columns: 1fr;
+       background-position: left 40px bottom 10px;
       }
     }
   }
