--- a/main/assets/css/base/_typography.scss
+++ b/main/assets/css/base/_typography.scss
@@ -27,11 +27,11 @@
   }
 
   h3 {
-    font-size: var(--text-lg, 1.44em);
+    font-size: var(--text-md, 1.44em);
   }
 
   h4 {
-    font-size: var(--text-md, 1.2em);
+    font-size: var(--text-sm, 1.2em);
   }
 
   small {
