--- a/main/assets/css/components/_example_card.scss
+++ b/main/assets/css/components/_example_card.scss
@@ -5,15 +5,14 @@
 
 .example-card {
   display: grid;
+  border-radius: var(--radius);
+  overflow: hidden;
 
   .card {
 
-    &__image {
-    border-radius:  var(--radius) var(--radius) 0 0;
-    }
-
     &__title {
       color: var(--color-primary);
+      text-transform: uppercase;
     }
 
     &__text {
@@ -22,44 +21,19 @@
 
     &__link {
       background: var(--color-primary-lighter);
-      border-radius: 0 0  var(--radius) var(--radius);
-    }
-
-    &__footer {
-      text-align: center;
-      padding: 32px 0px;
       display: grid;
-      justify-items: center;
+      place-items: center;
+      align-content: center;
       gap: 1rem;
+      padding: 2.25rem 0px;
     }
   }
 
   @include breakpoint(sm) {
     grid-template-columns: repeat(2, 1fr);
-
-    .card {
-
-      &__image {
-        border-radius:  var(--radius)  0  0 var(--radius);
-      }
-
-      &__link {
-        border-radius: 0 var(--radius) var(--radius) 0;
-      }
-    }
   }
 
   @include breakpoint(md) {
     grid-template-columns: 1fr;
-
-    .card {
-      &__image {
-        border-radius:  var(--radius)   var(--radius) 0 0;
-      }
-
-      &__link {
-        border-radius: 0 0 var(--radius) var(--radius) ;
-      }
-    }
   }
 }
