--- a/main/assets/css/custom-style/_util.scss
+++ b/main/assets/css/custom-style/_util.scss
@@ -1,3 +1,8 @@
+  :root {
+ --bg-position-x: left;
+ --bg-position-y: center;
+}
+
   .bg-primary {
     color: var(--color-white);
   }
@@ -9,4 +14,45 @@
 
   .rotate-180 {
     transform: rotate(180deg);
+  }
+
+  .bg-circle {
+    background-image:  url(../images/about/desktop/bg-pattern-hero-about-desktop.svg);
+    background-position: var(--bg-position-x) var(--bg-position-y);
+  }
+
+  .bg-circle--right-center {
+    --bg-position-x: right;
+  }
+
+  .bg-circle--right-top {
+    --bg-position-x: right;
+    --bg-position-y: top;
+  }
+
+  .bg-circle--right-bottom {
+    --bg-position-x: right;
+    --bg-position-y: top;
+  }
+
+  .bg-circle--center-top {
+    --bg-position-x: center;
+    --bg-position-y: top;
+  }
+
+  .bg-circle--center-center {
+    --bg-position-x: center;
+  }
+
+  .bg-circle--center-bottom {
+    --bg-position-x: center;
+    --bg-position-y: bottom;
+  }
+
+  .bg-circle--left-top {
+    --bg-position-y: top;
+  }
+
+    .bg-circle--left-bottom {
+    --bg-position-y: bottom;
   }
