fix icon card to be vertical on mobile and tablet

--- a/main/assets/css/pages/_about.scss
+++ b/main/assets/css/pages/_about.scss
@@ -24,4 +24,11 @@
       }
     }
   }
+
+  .icon-card {
+    @include breakpoint(sm) {
+      grid-auto-flow: row;
+      text-align: center;
+    }
+  }
 }
