--- a/main/assets/css/custom-style/_shared-styles.scss
+++ b/main/assets/css/custom-style/_shared-styles.scss
@@ -7,6 +7,7 @@
   display: grid; //avoids margin collapsing
   grid-template-columns: 1fr;
   position: relative;
+  overflow: hidden;
 
   &__img {
     display: none;
