--- a/main/assets/css/components/_wide_card.scss
+++ b/main/assets/css/components/_wide_card.scss
@@ -3,13 +3,35 @@
 // ++++++++++++++++++++
 
 .wide-card {
-  background-image: linear-gradient(145deg, var(--color-primary) 35%, alpha(var(--color-primary), 0.2) 45%), url(../images/shared/desktop/bg-pattern-call-to-action.svg);
-  background-position: right center;
+  --bg-transform: none;
   border-radius: var(--radius);
   padding: 4rem 1.5rem;
   display: grid;
   place-items: center;
   gap: 2rem;
+  position: relative;
+  z-index: 0;
+
+  &.wide-card--flip-horizontal{
+     --bg-transform: rotateY(180deg);
+  }
+
+  &.wide-card--flip-vertical {
+    --bg-transform: rotateX(180deg);
+  }
+
+
+  &::before {
+    position: absolute;
+    background-image: linear-gradient(140deg, var(--color-primary) 10%, alpha(var(--color-primary), 0) 100%), url(../images/shared/desktop/bg-pattern-call-to-action.svg);
+    background-position: right center;
+    content: '';
+    transform: var(--bg-transform);
+    width: 100%;
+    height: 100%;
+    left: 0;
+    z-index: -1;
+  }
 
   .text-component {
     --text-vspace-multiplier: 2; //controls vertical spacing of text
