--- a/main/assets/css/custom-style/_forms.scss
+++ b/main/assets/css/custom-style/_forms.scss
@@ -13,6 +13,8 @@
   line-height: 1.2;
   @include fontSmooth;
   transition: all 0.2s ease;
+  width: 100%;
+  padding: 1rem;
 
   &::placeholder {
     opacity: 1;
