--- a/main/assets/css/pages/_contact.scss
+++ b/main/assets/css/pages/_contact.scss
@@ -3,8 +3,34 @@
   .hero {
     --bg-image: url(../images/contact/desktop/bg-pattern-hero-desktop.svg);
     background-position: left bottom;
-
+    --hero-padding-y: 3.4375rem;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: calc(38rem - var(--hero-padding-x)) 1fr;
+    align-items: center;
+
+    &__form {
+      --form-control-padding-x: 1rem;
+      --form-control-padding-y: 1rem;
+      display: grid;
+      gap: 1.5625rem;
+    }
+
+    .form-control {
+      padding: 0 0 var(--form-control-padding-y) var(--form-control-padding-x);
+      transition: all 0.4s;
+      &:hover {
+        border-bottom: 2px solid var(--color-white);
+        margin-bottom: -1px;
+      }
+    }
+
+    .form-action-group {
+      justify-self: end;
+    }
+
+
+
   }
+
+
 }
