--- a/main/assets/css/custom-style/_buttons.scss
+++ b/main/assets/css/custom-style/_buttons.scss
@@ -1,7 +1,7 @@
 :root {
   --btn-font-size: 1em;
-  --btn-padding-x: var(--space-md);
-  --btn-padding-y: calc(var(--space-sm) + 4px) ;
+  --btn-padding-x: 2.9375em;
+  --btn-padding-y: 1.0625em;
   --btn-radius: 0.5em;
 }
 
