--- a/main/assets/css/pages/_contact.scss
+++ b/main/assets/css/pages/_contact.scss
@@ -9,8 +9,6 @@
     align-items: center;
 
     &__form {
-      --form-control-padding-x: 1rem;
-      --form-control-padding-y: 1rem;
       display: grid;
       gap: 1.5625rem;
     }
@@ -18,9 +16,10 @@
     .form-control {
       padding: 0 0 var(--form-control-padding-y) var(--form-control-padding-x);
       transition: all 0.4s;
+
       &:hover {
         border-bottom: 2px solid var(--color-white);
-        margin-bottom: -1px;
+        margin-bottom: -1px; //prevents content from shifting down
       }
     }
 
