--- a/main/assets/css/pages/_contact.scss
+++ b/main/assets/css/pages/_contact.scss
@@ -1,23 +1,46 @@
 .contact {
 
+    .container-outer__img {
+    --img-2-bottom: 10%;
+  }
+
   .hero {
-    --bg-image: url(../images/contact/desktop/bg-pattern-hero-desktop.svg);
-    background-position: left bottom;
+    --bg-image: url(../images/contact/mobile/bg-pattern-hero-contact-mobile.svg);
+    background-position: left -2rem top;
+    padding: 4.5rem 1.5rem;
+    text-align: center;
     display: grid;
     align-items: center;
     row-gap: 3rem;
 
-    &__article {
-      justify-items: start;
+    &__form {
+      display: grid;
+      gap: 1.5625rem;
     }
 
-    p {
-      max-width: 100%;
+    .form-action-group {
+      justify-self: center;
+      margin-top: 1rem;
     }
 
     @include breakpoint(sm) {
+      --bg-image: url(../images/contact/desktop/bg-pattern-hero-desktop.svg);
       background-position: left -6.25rem top -4.375rem;
       padding: 4.375rem 3.625rem;
+      text-align: left;
+
+      p {
+        max-width: 100%;
+      }
+
+      &__article {
+        justify-items: start;
+      }
+
+     .form-action-group {
+       justify-self: end;
+       margin-top: 0;
+      }
     }
 
     @include breakpoint(md) {
@@ -29,15 +52,6 @@
       p {
         max-width: 47ch;
       }
-    }
-
-    &__form {
-      display: grid;
-      gap: 1.5625rem;
-    }
-
-    .form-action-group {
-      justify-self: end;
     }
   }
 }
