--- a/main/assets/css/custom-style/_shared-styles.scss
+++ b/main/assets/css/custom-style/_shared-styles.scss
@@ -42,6 +42,23 @@
   }
 }
 
+// +++++++++++++++++++++
+// ++ HEADER SECTION  ++
+// ++++++++++++++++++++
+
+header {
+  margin-top: var(--nav-height); //move content down for fixed menu
+  color: var(--color-white);
+
+  .container {
+    background: var(--color-primary); //so it appears the hero fills 100% of width
+  }
+}
+
+
+
+
+
 // ++++++++++++++++++++++++++
 // ++ MAIN STYLES ++
 // ++++++++++++++++++++++++++
