extracted out the header code

--- a/main/assets/css/custom-style/_shared-styles.scss
+++ b/main/assets/css/custom-style/_shared-styles.scss
@@ -53,6 +53,14 @@ header {
   .container {
     background: var(--color-primary); //so it appears the hero fills 100% of width
   }
+
+  @include breakpoint(sm) {
+    margin-top: initial; //remove margin used for menu when menu was fixed;
+
+     .container {
+      background: var(--color-white);
+     }
+  }
 }
 
 
