simplify the code but did not extract any code yet

--- a/main/assets/css/custom-style/_shared-styles.scss
+++ b/main/assets/css/custom-style/_shared-styles.scss
@@ -42,9 +42,9 @@
   }
 }
 
-// +++++++++++++++++++++
-// ++ HEADER SECTION  ++
-// ++++++++++++++++++++
+// ++++++++++++
+// ++ HEADER ++
+// ++++++++++++
 
 header {
   margin-top: var(--nav-height); //move content down for fixed menu
@@ -62,6 +62,14 @@ header {
      }
   }
 }
+
+
+// +++++++++++
+// ++ HERO  ++
+// +++++++++++
+
+
+
 
 
 
