--- a/main/assets/css/pages/_contact.scss
+++ b/main/assets/css/pages/_contact.scss
@@ -1,8 +1,17 @@
+// +++++++++++++++++++
+// ++ CONTACT PAGE  ++
+// +++++++++++++++++++
+
+
 .contact {
 
     .container-outer__img {
     --img-2-bottom: 10%;
   }
+
+  // +++++++++++
+  // ++ HERO  ++
+  // +++++++++++
 
   .hero {
     --bg-image: url(../images/contact/mobile/bg-pattern-hero-contact-mobile.svg);
